* Added test runner.
* Fixed bad unit test result in pyrrd.utils.
* Adjusted stat.sh script.
* Updated setup.py.
* Updated date in LICENSE.
* Updated vars in example 1.
* Fixed var names in rrd.external.
* Renamed generateResultLines to iterParse and added some unit tests.
* Cleaned up testmod call.
* Cleaned up vars in rrd and graph modules.
* Fixed example1 to accord with var name changes.

2006.01.29

* Added code to example5.py for generating RRD files and graphs from the
sample data.
* Updated the commends in example5.py and extended the 3-day archive to a
7-day archive.
* Corrected the vname in cdef1 of example5.py.

2006.01.28

* Added a couple doctests to the utils module.
* Added template support to rrd.RRD.update().
* Added a data file for the 5th example.
* Extended the flexibility of rrd.RRD.bufferValue() such that it can now take
a single parameter, and if so, that parameter will be considered a "data
chunk", i.e., a group of one or more time:data strings.
* Added missing step attribute in rrd.RRD.__init__().

2006.01.24

* Setup all graph.Graph parameters to be initialized.
* Added code for graph.Print and graph.GraphPrint.
* Added code for graph.Comment.
* Added an examples directory.
* Added code for graph.Line
* Added code for graph.Area.
* Finised graph.Graph.
* Added graph.ColorAttributes class for easy OOP-configuration of a graph's
overall color attributes.
* As a first example, added the graph-generating code from the doctests.
* Split the first example into two in order to show the color differences as a
separate example.
* Added a third example.
* Updated rrd.RRD.bufferValue() to handle multiple values per line (for
instances where more than one DS is getting updated in an RRD).
* Added debug options to graph.Graph.write() and rrd.RRD.update().
* Added a fourth example with a little more math for additional data sets.
* Added INSTALL and README files.
* Removed cruft from sandbox and removed "old" from lib.
* Updated to newest ez_setup.py.
